- fix: z-index(3)

--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -173,6 +173,7 @@
         left: 0;
         top: 50%;
         transform: translateY(-50%);
+        z-index: 1;
 
 
         @include max-min(max toPx($device-tablet + 1)) {
